--- a/css/stylemyweb.css
+++ b/css/stylemyweb.css
@@ -1,8 +1,5 @@
-nav {
-	
-	margin-bottom: 30px;
-	padding-bottom: 1px;
-	
+body {
+ padding-top: 70px; 
 }
 
 #onpage{
@@ -12,6 +9,7 @@ nav {
    box-shadow:         inset 0 0 10px #000000;
 
 }
+
 #page {
 	margin: 30px;
 }
@@ -19,11 +17,33 @@ nav {
 	padding-left: 50px;
 	padding-right: 50px;
 }
+.Info{
+	font-weight: bold;
+
+}
+.collage{
+	font-weight: bold;
+}
+.smalltext{
+	font-size: 13px;
+}
+.stateofcv{
+	background-color: #a6bbdb;
+	padding-top: 35px;
+	padding-bottom: 35px;
+}
+.cvdownload{
+	text-align: center;
+	margin: 50px;
+}
+.basicinfo{
+	padding: 50px;
+}
 footer{
 	margin-top: 50px;
 	margin-bottom: 30px;
 	background: #f5f5f5;
 	
 	text-align: center;
-	padding: 30px;
+	padding-top: 30px;
 }
