--- a/css/stylemyweb.css
+++ b/css/stylemyweb.css
@@ -1,7 +1,27 @@
 body {
  padding-top: 70px; 
 }
-
+.cardrow{
+	margin-top:20px;
+	margin-bottom: 20px;
+}
+.cardofhappit{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: .03s;	
+}
+.cardofhappit:hover{
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.cardbody{
+	padding: 2px 16px;
+	word-wrap: break-word;
+}
+.cvheder{
+	background-color: #a6bbdb;
+}
+.cvbody{
+	background-color: #f5f5f0;
+}
 #onpage{
 	
    -moz-box-shadow:    inset 0 0 10px #000000;
@@ -37,8 +57,10 @@ body {
 	margin: 50px;
 }
 .basicinfo{
-	padding: 50px;
+	padding-left: 40px;
+	padding-top: 30px;
 }
+
 footer{
 	margin-top: 50px;
 	margin-bottom: 30px;
