--- a/css/stylemyweb.css
+++ b/css/stylemyweb.css
@@ -29,6 +29,26 @@ body {
    box-shadow:         inset 0 0 10px #000000;
 
 }
+.floating-menu {
+    font-family: sans-serif;
+    background: #a6bbdb;
+    opacity: .5;
+    padding: 5px;;
+    width: 30%;
+    z-index: 100;
+    position: fixed;
+ }
+ .floating-menu:hover{
+ 	opacity: 1.0;
+ }
+ .floating-menu a, 
+ .floating-menu h3 {
+    font-size: 0.9em;
+    display: block;
+    margin: 0 0.5em;
+    color: white;
+ }
+
 
 #page {
 	margin: 30px;
